source/blender/asset_system/intern/asset_library.cc
@@ -208,17 +208,19 @@ AssetCatalogService &AssetLibrary::catalog_service() const
 
 void AssetLibrary::refresh_catalogs() {}
 
-AssetRepresentation &AssetLibrary::add_external_asset(StringRef relative_asset_path,
-                                                      StringRef name,
-                                                      const int id_type,
-                                                      std::unique_ptr<AssetMetaData> metadata)
+std::weak_ptr<AssetRepresentation> AssetLibrary::add_external_asset(
+    StringRef relative_asset_path,
+    StringRef name,
+    const int id_type,
+    std::unique_ptr<AssetMetaData> metadata)
 {
   AssetIdentifier identifier = this->asset_identifier_from_library(relative_asset_path);
   return asset_storage_->add_external_asset(
       std::move(identifier), name, id_type, std::move(metadata), *this);
 }
 
-AssetRepresentation &AssetLibrary::add_local_id_asset(StringRef relative_asset_path, ID &id)
+std::weak_ptr<AssetRepresentation> AssetLibrary::add_local_id_asset(StringRef relative_asset_path,
+                                                                    ID &id)
 {
   AssetIdentifier identifier = this->asset_identifier_from_library(relative_asset_path);
   return asset_storage_->add_local_id_asset(std::move(identifier), id, *this);
